<resources>
    <string name="app_name">Sisga</string>
    <string name="picture_button">Take picture</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="eigenfaces">Eigenfaces</string>
    <string name="fisherfaces">Fisherfaces</string>
    <string name="threshold_face">Face threshold:</string>
    <string name="threshold_distance">Distance threshold:</string>
    <string name="maximum_images">Maximum number of images:</string>
    <string name="clear_button">Clear training set</string>
    <string name="flip">Flip</string>

    <string name="username">Masukkan username</string>
    <string name="password">Masukkan password</string>
    <string name="button">MASUK</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="nama_pegawai_honorer">Nama Pegawai Honorer</string>
    <string name="absen_masuk">Absen Masuk</string>
    <string name="absen_keluar">Absen Keluar</string>
    <string name="cuti_pegawai">Cuti Pegawai</string>
    <string name="surat_pejalanan_dinas">SPPD</string>
    <string name="rekap_absensi_saya">Rekap Absensi Saya</string>
    <string name="about">Tentang</string>
    <string name="about_title">Tentang Aplikasi</string>
    <string name="account">Akun</string>
    <string name="my_account">Akun Saya</string>
    <string name="account_title">Halaman Akun</string>
    <string name="login">LOGIN PEGAWAI</string>
    <string name="boy">Reynaldi Prama Octavially</string>
    <string name="girl">Lisa Mareta</string>
    <string name="credit">Ikon dibuat oleh Pixel Perfect dari www.flaticon.com</string>
    <string name="tim_alfredo">Tim Alfredo</string>
    <string name="tombol_simpan">SIMPAN</string>
    <string name="logout">KELUAR</string>
    <string name="klik_disini">Klik disini!</string>
    <string name="cuti_beranda">Beranda Cuti</string>
    <string name="sppd_beranda">Beranda SPPD</string>
    <string name="nama_pegawai">Nama Pegawai</string>
    <string name="jabatan_pegawai">Jabatan Pegawai</string>
    <string name="email_pegawai">Email Pegawai</string>
    <string name="nomor_telepon_pegawai">No. Telepon Pegawai</string>
    <string name="no_rekening_pegawai">No. Rekening Pegawai</string>
    <string name="alamat_pegawai">Alamat Pegawai</string>
    <string name="username_pegawai">Username Pegawai</string>
    <string name="password_pegawai">Password Pegawai</string>
    <string name="pengajuan_cuti_title">Pengajuan Cuti Pegawai</string>
    <string name="pengajuan_surat_title">Pengajuan SPPD</string>
    <string name="form_pengajuan">Silahkan isi form pengajuan</string>
    <string name="alasan_pengajuan_cuti">Alasan pengajuan cuti</string>
    <string name="tanggal_mulai">Tanggal mulai (Klik 2X untuk membuka kalender)</string>
    <string name="tanggal_selesai">Tanggal selesai (Klik 2X untuk membuka kalender)</string>
    <string name="ajukan_cuti">Ajukan cuti</string>
    <string name="tujuan_pengajuan_sppd">Tujuan Pengajuan SPPD</string>
    <string name="ajukan_surat_perjalanan_dinas">Ajukan Surat Perjalanan Dinas</string>
    <string name="cuti_title">Cuti Pegawai</string>
    <string name="sppd_title">Surat Perjalanan Dinas</string>
    <string name="tanggal_mulai_detail">Tanggal mulai</string>
    <string name="tanggal_selesai_detail">Tanggal selesai</string>
    <string name="face">Merekam wajah</string>

    <string name="tanggal_pengajuan_cuti">Tanggal pengajuan cuti :</string>
    <string name="tanggal_mulai_cuti">Tanggal mulai cuti :</string>
    <string name="tanggal_selesai_cuti">Tanggal selesai cuti :</string>
    <string name="keterangan_cuti">Keterangan cuti :</string>

    <string name="tanggal_pengajuan_sppd">Tanggal pengajuan sppd :</string>
    <string name="tanggal_mulai_sppd">Tanggal mulai sppd :</string>
    <string name="tanggal_selesai_sppd">Tanggal selesai sppd :</string>
    <string name="keterangan_sppd">Keterangan sppd :</string>
    <string name="lakukan_pengajuan">Lakukan pengajuan</string>
    <string name="berhasil_absen">Selamat, anda berhasil melakukan absen. Silahkan klik tombol kembali di bagian kiri atas</string>
    <string name="alasan_pengajuan_cuti2">Alasan pengajuan cuti :</string>
    <string name="tujuan_pengajuan_sppd2">Tujuan pengajuan sppd :</string>
    <string name="jenis_cuti">Jenis cuti :</string>
    <string name="pemotongan_honor">Pemotongan honor :</string>
    <string name="jenis_surat">Jenis surat :</string>
    <string name="uang_saku">Uang saku :</string>
</resources>
