<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:SeekBarArrows="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context=".facerecognition.FaceInActivity">

    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/nav_header_main" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/arrow_text_margin"
                android:layout_marginLeft="@dimen/arrow_text_margin"
                android:layout_marginRight="@dimen/arrow_text_margin"
                android:orientation="vertical">

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/fisherfaces"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:text="@string/fisherfaces" />

                    <RadioButton
                        android:id="@+id/eigenfaces"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="false"
                        android:text="@string/eigenfaces" />

                </RadioGroup>

                <org.diskominfo.sisga.facerecognition.SeekBarArrows
                    android:id="@+id/threshold_face"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    SeekBarArrows:text="@string/threshold_face"
                    SeekBarArrows:max=".5"
                    SeekBarArrows:n_values="500" />

                <org.diskominfo.sisga.facerecognition.SeekBarArrows
                    android:id="@+id/threshold_distance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    SeekBarArrows:text="@string/threshold_distance"
                    SeekBarArrows:max=".5"
                    SeekBarArrows:n_values="500" />

                <org.diskominfo.sisga.facerecognition.SeekBarArrows
                    android:id="@+id/maximum_images"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    SeekBarArrows:max="200"
                    SeekBarArrows:min="5"
                    SeekBarArrows:n_values="50"
                    SeekBarArrows:text="@string/maximum_images" />

                <Button
                    android:id="@+id/clear_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/arrow_text_margin"
                    android:text="@string/clear_button" />

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>
